[Smit Koli] Alignment issues in Press page is fixed

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,7 +17,7 @@ $whiteColor: #ffffff;
   position: relative;
 }
 #nav2{
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   background-color: #111;
