--- a/src/components/LatestNews/LatestNews.scss
+++ b/src/components/LatestNews/LatestNews.scss
@@ -95,6 +95,8 @@
     }
     .latest-news-content{
         position: absolute;
+        left: 700px;
+        top: 85px;
         margin-left: auto;
         margin-top: auto;
         margin-bottom: auto;
@@ -154,6 +156,9 @@
 @media screen and (max-width: 1400px) {   
     .latest-news-div{
         width: 90vw;
+        .latest-news-content{
+            left: 650px;
+        }
     }
 }
 @media screen and (max-width: 1280px) {
@@ -169,6 +174,7 @@
     .latest-news-div{
         height: 110vh;
         .latest-news-content{
+            left: 550px;
             h1{
                 padding: 0;
                 margin: 0;
@@ -193,17 +199,19 @@
     }
     .latest-news-div{
         width: 100vw;
-        height: 70vh;
+        height: 90vh;
         img{
             width: 100%;
             height: 50%;
             margin: 0;
         }
         .latest-news-content{
-            width: 80%;
-            height: 60%;
+            width: 60%;
+            height: 55vh;
             margin-left: auto;
             margin-right: auto;
+            left: 50%;
+            transform: translateX(-50%);
             top: 30%;
             p{
                 width: 50%;
@@ -233,13 +241,13 @@
 
 
 @media screen and (max-width: 576px) {
-
 } 
 
 @media screen and (max-width: 480px) {
     .latest-news-div{
         height: 110vh;
         .latest-news-content{
+            width: 80%;
             height: 70vh;
             h1{
                 font-size: 1.5rem;
