--- a/src/components/PressGrid/PressGrid.scss
+++ b/src/components/PressGrid/PressGrid.scss
@@ -96,9 +96,9 @@
         height: max-content;
         display: flex;
         flex-direction: column;
-        grid-gap: 20px;
+        grid-gap: 40px;
         margin-top: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
         .press-grid{
             height: max-content;
         }
